--- a/src/cpp/CMakeLists.txt
+++ b/src/cpp/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(cpp stuff.cpp)
+add_library(cpp SHARED stuff.cpp)
 install (TARGETS cpp DESTINATION bin)
 install (FILES stuff.h DESTINATION include)
