--- a/src/cpp/CMakeLists.txt
+++ b/src/cpp/CMakeLists.txt
@@ -1,3 +1,6 @@
+
 add_library(cpp SHARED stuff.cpp)
-install (TARGETS cpp DESTINATION bin)
-install (FILES stuff.h DESTINATION include)
+
+install (TARGETS cpp DESTINATION ${PROJECT_BINARY_DIR}/../../cpp_lib)
+install (FILES stuff.h DESTINATION ${PROJECT_BINARY_DIR}/../../cpp_include)
+
