--- a/src/swig_files/CMakeLists.txt
+++ b/src/swig_files/CMakeLists.txt
@@ -4,13 +4,12 @@ FIND_PACKAGE(JNI REQUIRED)
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 SET(CMAKE_SWIG_FLAGS "")
+SET(CMAKE_SWIG_OUTDIR "${PROJECT_SOURCE_DIR}/../gen_java_src")
 SET_SOURCE_FILES_PROPERTIES(fact.i PROPERTIES CPLUSPLUS ON)
 SET_SOURCE_FILES_PROPERTIES(fact.i PROPERTIES SWIG_FLAGS "-includeall")
 include_directories(${JNI_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/cpp)
 SWIG_ADD_MODULE(wrapper java fact.i)
 SWIG_LINK_LIBRARIES(wrapper ${JNI_LIBRARIES} ${wrapper} cpp)
-install(TARGETS wrapper DESTINATION ${PROJECT_BINARY_DIR}/../../cpp_lib)
+install(TARGETS wrapper DESTINATION ${PROJECT_SOURCE_DIR}/../cpp_lib)
 
-file(GLOB_RECURSE GEN_JAVA_SRC "${CMAKE_CURRENT_BINARY_DIR}/*.java")
-
-install(FILES ${GEN_JAVA_SRC} DESTINATION ${PROJECT_BINARY_DIR}/../../gen_java_src)
+install(DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}" DESTINATION ${PROJECT_BINARY_DIR}/../../gen_java_src REGEX "java$")
