renamed to misc_utils.i

--- a/src/swig_files/CMakeLists.txt
+++ b/src/swig_files/CMakeLists.txt
@@ -8,6 +8,6 @@ SET(CMAKE_SWIG_OUTDIR "${PROJECT_SOURCE_DIR}/../gen_java_src")
 SET_SOURCE_FILES_PROPERTIES(fact.i PROPERTIES CPLUSPLUS ON)
 SET_SOURCE_FILES_PROPERTIES(fact.i PROPERTIES SWIG_FLAGS "-includeall")
 include_directories(${JNI_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/cpp)
-SWIG_ADD_MODULE(wrapper java fact.i)
-SWIG_LINK_LIBRARIES(wrapper ${JNI_LIBRARIES} ${wrapper} cpp)
+SWIG_ADD_MODULE(misc_utils java fact.i)
+SWIG_LINK_LIBRARIES(misc_utils ${JNI_LIBRARIES} ${wrapper} cpp)
 install(TARGETS wrapper DESTINATION ${PROJECT_SOURCE_DIR}/../cpp_lib)
