--- a/src/swig_files/CMakeLists.txt
+++ b/src/swig_files/CMakeLists.txt
@@ -3,11 +3,11 @@ INCLUDE(${SWIG_USE_FILE})
 FIND_PACKAGE(JNI REQUIRED)
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
-SET(CMAKE_SWIG_FLAGS "-module misc_utils")
+SET(CMAKE_SWIG_FLAGS "")
 SET(CMAKE_SWIG_OUTDIR "${PROJECT_SOURCE_DIR}/../gen_java_src")
 SET_SOURCE_FILES_PROPERTIES(misc_utils.i PROPERTIES CPLUSPLUS ON)
 SET_SOURCE_FILES_PROPERTIES(misc_utils.i PROPERTIES SWIG_FLAGS "-includeall")
 include_directories(${JNI_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/cpp)
 SWIG_ADD_MODULE(misc_utils java misc_utils.i)
-SWIG_LINK_LIBRARIES(misc_utils ${JNI_LIBRARIES} ${wrapper} cpp)
+SWIG_LINK_LIBRARIES(misc_utils ${JNI_LIBRARIES} ${misc_utils} cpp)
 install(TARGETS misc_utils DESTINATION ${PROJECT_SOURCE_DIR}/../cpp_lib)
