--- a/src/cpp/CMakeLists.txt
+++ b/src/cpp/CMakeLists.txt
@@ -1,6 +1,1 @@
-
-add_library(cpp SHARED stuff.cpp)
-
-install (TARGETS cpp DESTINATION ${PROJECT_SOURCE_DIR}/../cpp_lib)
-install (FILES stuff.h DESTINATION ${PROJECT_SOURCE_DIR}/../cpp_include)
-
+SUBDIRS("stuff")
