--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,10 @@
 cmake_minimum_required(VERSION 2.6)
 project(swig_java)
+set(CMAKE_BUILD_TYPE DEBUG)
+set(CMAKE_C_FLAGS "-O0 -ggdb3")
+set(CMAKE_C_FLAGS_DEBUG "-O0 -ggdb3")
+set(CMAKE_C_FLAGS_RELEASE "-O0 -ggdb3")
+set(CMAKE_CXX_FLAGS "-O0 -ggdb3")
+set(CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb3")
+set(CMAKE_CXX_FLAGS_RELEASE "-O0 -ggdb3")
 SUBDIRS(cpp swig_files)
