--- a/src/cpp/CMakeLists.txt
+++ b/src/cpp/CMakeLists.txt
@@ -1,1 +1,4 @@
 SUBDIRS("stuff")
+add_library(cpp SHARED stuff)
+SET_TARGET_PROPERTIES(cpp PROPERTIES LINKER_LANGUAGE CXX)
+install(TARGETS cpp DESTINATION ${PROJECT_SOURCE_DIR}/../cpp_lib)
