--- a/src/cpp/stuff/CMakeLists.txt
+++ b/src/cpp/stuff/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-add_library(stuff SHARED stuff.cpp)
-install (TARGETS stuff DESTINATION ${PROJECT_SOURCE_DIR}/../cpp_lib)
-install (FILES stuff.h DESTINATION ${PROJECT_SOURCE_DIR}/../cpp_include/stuff)
+add_library(misc_utils SHARED misc_utils.cpp)
+install (TARGETS misc_utils DESTINATION ${PROJECT_SOURCE_DIR}/../cpp_lib)
+install (FILES misc_utils.hpp DESTINATION ${PROJECT_SOURCE_DIR}/../cpp_include/misc_utils)
 
