--- a/src/swig_files/CMakeLists.txt
+++ b/src/swig_files/CMakeLists.txt
@@ -8,6 +8,6 @@ SET(CMAKE_SWIG_OUTDIR "${PROJECT_SOURCE_DIR}/../gen_java_src")
 SET_SOURCE_FILES_PROPERTIES(misc_utils.i PROPERTIES CPLUSPLUS ON)
 SET_SOURCE_FILES_PROPERTIES(misc_utils.i PROPERTIES SWIG_FLAGS "-includeall")
 include_directories(${JNI_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/cpp)
-SWIG_ADD_MODULE(misc_utils java misc_utils.i)
-SWIG_LINK_LIBRARIES(misc_utils ${JNI_LIBRARIES} ${misc_utils} cpp)
-install(TARGETS misc_utils DESTINATION ${PROJECT_SOURCE_DIR}/../cpp_lib)
+SWIG_ADD_MODULE(misc_utils_java java misc_utils.i)
+SWIG_LINK_LIBRARIES(misc_utils_java ${JNI_LIBRARIES} ${misc_utils_java} cpp)
+install(TARGETS misc_utils_java DESTINATION ${PROJECT_SOURCE_DIR}/../cpp_lib)
