--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,3 +8,4 @@ set(CMAKE_CXX_FLAGS "-O0 -ggdb3")
 set(CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb3")
 set(CMAKE_CXX_FLAGS_RELEASE "-O0 -ggdb3")
 SUBDIRS(cpp swig_files)
+add_dependencies(swig_files/misc_utils_java cpp)
