--- a/src/cpp/misc_utils/CMakeLists.txt
+++ b/src/cpp/misc_utils/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-add_library(misc_utils STATIC misc_utils.cpp)
+add_library(misc_utils misc_utils.cpp)
 install (TARGETS misc_utils DESTINATION ${PROJECT_SOURCE_DIR}/../cpp_lib)
 install (FILES misc_utils.hpp DESTINATION ${PROJECT_SOURCE_DIR}/../cpp_include/misc_utils)
 
