--- a/src/cpp/CMakeLists.txt
+++ b/src/cpp/CMakeLists.txt
@@ -1,4 +1,6 @@
+project(cpp_libs)
 SUBDIRS(misc_utils)
-add_library(cpp misc_utils)
+add_library(cpp_libs)
+target_link_libraries(cpp_libs misc_utils)
 SET_TARGET_PROPERTIES(cpp PROPERTIES LINKER_LANGUAGE CXX)
 install(TARGETS cpp DESTINATION ${PROJECT_SOURCE_DIR}/../cpp_lib)
