--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,4 +8,6 @@ set(CMAKE_CXX_FLAGS "-O0 -ggdb3")
 set(CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb3")
 set(CMAKE_CXX_FLAGS_RELEASE "-O0 -ggdb3")
 SUBDIRS(cpp swig_files)
-add_dependencies(swig_files/misc_utils_java cpp)
+add_library(misc_utils_java)
+target_link_libraries(misc_utils_java cpp swig_files)
+install(TARGETS misc_utils_java DESTINATION ${PROJECT_SOURCE_DIR}/../cpp_lib)
