--- a/src/cpp/misc_utils/CMakeLists.txt
+++ b/src/cpp/misc_utils/CMakeLists.txt
@@ -1,2 +1,2 @@
-set(CPP_SOURCES ${CPP_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/misc_utils.cpp)
-set(CPP_INCLUDE_DIRS ${CPP_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
+set(CPP_SOURCES ${CPP_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/misc_utils.cpp PARENT_SCOPE)
+set(CPP_INCLUDE_DIRS ${CPP_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)
