--- a/src/swig_files/CMakeLists.txt
+++ b/src/swig_files/CMakeLists.txt
@@ -1,3 +1,3 @@
 set(SWIG_INTERFACE_FILES 
   ${SWIG_INTERFACE_FILES} 
-  ${CMAKE_CURRENT_SOURCE_DIR}/misc_utils.i)
+  ${CMAKE_CURRENT_SOURCE_DIR}/misc_utils.i PARENT_SCOPE)
