--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,14 @@ message("CPP_SOURCES : '${CPP_SOURCES}'")
 message("CPP_INCLUDE_DIRS : '${CPP_INCLUDE_DIRS}'")
 message("JAVA_SOURCES : '${JAVA_SOURCES}'")
 message("SWIG_INTERFACE_FILES : '${SWIG_INTERFACE_FILES}'")
+FIND_PACKAGE(SWIG REQUIRED)
+INCLUDE(${SWIG_USE_FILE}) 
+FIND_PACKAGE(JNI REQUIRED) 
+SET(CMAKE_SWIG_FLAGS "-c++")                                                                                                                 
+SET(CMAKE_SWIG_OUTDIR "${PROJECT_SOURCE_DIR}/../gen_java_src")                                                                               
+
+SWIG_ADD_MODULE(java_interop java ${SWIG_INTERFACE_FILES}) 
+SWIG_LINK_LIBRARIES(java_interop ${JNI_LIBRARIES} cpp_lib)
 add_library(cpp_lib ${CPP_SOURCES})
 
 find_package(Java COMPONENTS "Development" REQUIRED)
