--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,12 +15,15 @@ message("SWIG_INTERFACE_FILES : '${SWIG_INTERFACE_FILES}'")
 FIND_PACKAGE(SWIG REQUIRED)
 INCLUDE(${SWIG_USE_FILE}) 
 FIND_PACKAGE(JNI REQUIRED) 
-SET(CMAKE_SWIG_FLAGS "-c++")                                                                                                                 
-SET(CMAKE_SWIG_OUTDIR "${PROJECT_SOURCE_DIR}/../gen_java_src")                                                                               
-
-SWIG_ADD_MODULE(java_interop java ${SWIG_INTERFACE_FILES}) 
-SWIG_LINK_LIBRARIES(java_interop ${JNI_LIBRARIES} cpp_lib)
+include_directories(${CPP_INCLUDE_DIRS} ${JNI_INCLUDE_DIRS})
+set(CMAKE_CXX_FLAGS "-fPIC")
 add_library(cpp_lib ${CPP_SOURCES})
+set(CMAKE_SWIG_FLAGS "")                                                                                                                 
+set(CMAKE_SWIG_OUTDIR "${PROJECT_SOURCE_DIR}/../gen_java_src")                                                                               
+set_source_files_properties(${SWIG_INTERFACE_FILES} PROPERTIES CPLUSPLUS ON)
+swig_add_module(java_interop java ${SWIG_INTERFACE_FILES}) 
+swig_link_libraries(java_interop ${JNI_LIBRARIES} cpp_lib)
+
 
 find_package(Java COMPONENTS "Development" REQUIRED)
 find_package(JNI REQUIRED)
