--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,9 +3,8 @@ project(swig_java)
 find_package(SWIG REQUIRED)
 include(${SWIG_USE_FILE}) 
 find_package(JNI REQUIRED) 
-include_directories(${CPP_INCLUDE_DIRS} ${JNI_INCLUDE_DIRS})
-set(CMAKE_CXX_FLAGS "-fPIC")
 
+set(CMAKE_CXX_FLAGS "-fPIC")
 set(CPP_SOURCES "")
 set(CPP_INCLUDE_DIRS "")
 set(JAVA_SOURCES "")
@@ -20,10 +19,12 @@ message("CPP_INCLUDE_DIRS : '${CPP_INCLUDE_DIRS}'")
 message("JAVA_SOURCES : '${JAVA_SOURCES}'")
 message("SWIG_INTERFACE_FILES : '${SWIG_INTERFACE_FILES}'")
 
+include_directories(${CPP_INCLUDE_DIRS} ${JNI_INCLUDE_DIRS})
 add_library(cpp_lib ${CPP_SOURCES})
 
 set(CMAKE_SWIG_FLAGS "")                                                                                                                 
 set(CMAKE_SWIG_OUTDIR "${PROJECT_SOURCE_DIR}/../gen_java_src")                                                                               
+set_source_files_properties(${SWIG_INTERFACE_FILES} PROPERTIES CPLUSPLUS ON)
 swig_add_module(java_interop java ${SWIG_INTERFACE_FILES})
 swig_link_libraries(java_interop ${JNI_LIBRARIES} cpp_lib)
 install(TARGETS java_interop DESTINATION ${CMAKE_SOURCE_DIR}/../cpp_lib)
