--- a/src/cpp/callback/CMakeLists.txt
+++ b/src/cpp/callback/CMakeLists.txt
@@ -1,8 +1,9 @@
 include_directories(. ${JNI_INCLUDE_DIRS}) 
 set(CMAKE_SWIG_FLAGS -package callback)
 set_source_files_properties(example.i PROPERTIES CPLUSPLUS ON)
-set_source_files_properties(example.i PROPERTIES SWIG_OUTDIR ${CMAKE_SWIG_OUTDIR}/callback)
+message("JAVA_GEN_SOURCE_DIR : ${JAVA_GEN_SOURCE_DIR}")
+set_source_files_properties(example.i PROPERTIES SWIG_OUTDIR "${JAVA_GEN_SOURCE_DIR}/callback")
 swig_add_module(callback_java java example.i) 
-swig_link_libraries(callback_java ${JNI_LIBRARIES} ${swig_files})           
+swig_link_libraries(callback_java ${JNI_LIBRARIES} ${callback_java})           
 install(TARGETS callback_java DESTINATION ${CMAKE_SOURCE_DIR}/../cpp_lib)
 #set_source_files_properties(example.i PROPERTIES SWIG_FLAGS "-package\ callback")
