--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,8 +10,8 @@ set(CPP_INCLUDE_DIRS "")
 set(JAVA_SOURCES "")
 set(SWIG_INTERFACE_FILES "")
 set(CMAKE_SWIG_FLAGS "")                                                                                                                 
-set(JAVA_GEN_SOURCE_DIR "${PROJECT_SOURCE_DIR}/../gen_java_src/")
- 
+set(CMAKE_SWIG_OUTDIR "${PROJECT_SOURCE_DIR}/../gen_java_src/")
+file(MAKE_DIRECTORY ${CMAKE_SWIG_OUTDIR}) 
 add_subdirectory(swig_files)
 add_subdirectory(cpp)
 add_subdirectory(java)
@@ -26,7 +26,7 @@ add_library(cpp_lib ${CPP_SOURCES})
 
 
 set_source_files_properties(${SWIG_INTERFACE_FILES} PROPERTIES CPLUSPLUS ON)
-set_source_files_properties(${SWIG_INTERFACE_FILES} PROPERTIES SWIG_OUTDIR ${JAVA_GEN_SOURCE_DIR})
+
 swig_add_module(java_interop java ${SWIG_INTERFACE_FILES})
 swig_link_libraries(java_interop ${JNI_LIBRARIES} cpp_lib)
 install(TARGETS java_interop DESTINATION ${CMAKE_SOURCE_DIR}/../cpp_lib)
