added custom command

--- a/src/cpp/callback/CMakeLists.txt
+++ b/src/cpp/callback/CMakeLists.txt
@@ -1,9 +1,14 @@
 include_directories(. ${JNI_INCLUDE_DIRS}) 
-set(CMAKE_SWIG_FLAGS -package callback)
-set(CMAKE_SWIG_OUTDIR "${CMAKE_SWIG_OUTDIR}/callback")
+set(PKG_NAME "callback")
+set(CMAKE_SWIG_FLAGS -package ${PKG_NAME})
+set(CMAKE_SWIG_OUTDIR "${CMAKE_SWIG_OUTDIR}/${PKG_NAME}")
 file(MAKE_DIRECTORY ${CMAKE_SWIG_OUTDIR})
 set_source_files_properties(example.i PROPERTIES CPLUSPLUS ON)
 swig_add_module(callback_java java example.i) 
 swig_link_libraries(callback_java ${JNI_LIBRARIES} ${callback_java})           
 install(TARGETS callback_java DESTINATION ${CMAKE_SOURCE_DIR}/../cpp_lib)
+add_custom_command(OUTPUT "${CMAKE_SWIG_OUTDIR}/runme.java" 
+  COMMAND echo "package ${PKG_NAME}" | cat - ${CMAKE_CURRENT_SOURCE_DIR}/*.java > ${CMAKE_SWIG_OUTDIR})
+
+  
 #set_source_files_properties(example.i PROPERTIES SWIG_FLAGS "-package\ callback")
