--- a/src/cpp/extend/CMakeLists.txt
+++ b/src/cpp/extend/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_swig_java_wrapper(extend)
+add_swig_java_wrapper(extend example.cxx)
   
 #set_source_files_properties(example.i PROPERTIES SWIG_FLAGS "-package\ callback")
