--- a/src/cpp/jclass/CMakeLists.txt
+++ b/src/cpp/jclass/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_swig_java_wrapper(jclass)
+add_swig_java_wrapper(jclass example.cxx)
   
 #set_source_files_properties(example.i PROPERTIES SWIG_FLAGS "-package\ callback")
