--- a/src/cpp/jenum/CMakeLists.txt
+++ b/src/cpp/jenum/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_swig_java_wrapper(jenum)
+add_swig_java_wrapper(jenum example.cxx)
   
 #set_source_files_properties(example.i PROPERTIES SWIG_FLAGS "-package\ callback")
