--- a/src/cpp/reference/CMakeLists.txt
+++ b/src/cpp/reference/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_swig_java_wrapper(reference)
+add_swig_java_wrapper(reference example.cxx)
   
 #set_source_files_properties(example.i PROPERTIES SWIG_FLAGS "-package\ callback")
