--- a/src/cpp/CMakeLists.txt
+++ b/src/cpp/CMakeLists.txt
@@ -19,6 +19,7 @@ add_subdirectory(jenum)
 add_subdirectory(jclass)
 add_subdirectory(reference)
 add_subdirectory(extend)
+add_subdirectory(jtemplate)
 
 set(CPP_SOURCES ${CPP_SOURCES} PARENT_SCOPE)
 set(CPP_INCLUDE_DIRS ${CPP_INCLUDE_DIRS} PARENT_SCOPE)
