--- a/src/cpp/jtemplate/CMakeLists.txt
+++ b/src/cpp/jtemplate/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_swig_java_wrapper(jtemplate)
+add_swig_java_wrapper(jtemplate example.cpp)
   
 #set_source_files_properties(example.i PROPERTIES SWIG_FLAGS "-package\ callback")
