--- a/src/cpp/CMakeLists.txt
+++ b/src/cpp/CMakeLists.txt
@@ -20,7 +20,7 @@ add_subdirectory(jclass)
 add_subdirectory(reference)
 add_subdirectory(extend)
 add_subdirectory(jtemplate)
-
+add_subdirectory(constants)
 set(CPP_SOURCES ${CPP_SOURCES} PARENT_SCOPE)
 set(CPP_INCLUDE_DIRS ${CPP_INCLUDE_DIRS} PARENT_SCOPE)
 set(SWIG_INTERFACE_FILES ${SWIG_INTERFACE_FILES} PARENT_SCOPE)
