--- a/src/cpp/CMakeLists.txt
+++ b/src/cpp/CMakeLists.txt
@@ -24,7 +24,8 @@ add_subdirectory(constants)
 #add_subdirectory(multimap)
 #add_subdirectory(native)
 add_subdirectory(funcptr)
-
+add_subdirectory(pointer)
+add_subdirectory(simple)
 set(CPP_SOURCES ${CPP_SOURCES} PARENT_SCOPE)
 set(CPP_INCLUDE_DIRS ${CPP_INCLUDE_DIRS} PARENT_SCOPE)
 set(SWIG_INTERFACE_FILES ${SWIG_INTERFACE_FILES} PARENT_SCOPE)
