--- a/src/cpp/CMakeLists.txt
+++ b/src/cpp/CMakeLists.txt
@@ -26,7 +26,8 @@ add_subdirectory(constants)
 add_subdirectory(funcptr)
 add_subdirectory(pointer)
 add_subdirectory(simple)
-add_subdirectory(typemap)
+#add_subdirectory(typemap)
+add_subdirectory(variables)
 
 set(CPP_SOURCES ${CPP_SOURCES} PARENT_SCOPE)
 set(CPP_INCLUDE_DIRS ${CPP_INCLUDE_DIRS} PARENT_SCOPE)
