removed the turning on of c++ options from the macro and moved it to individual cmakelist files

--- a/src/cpp/jenum/CMakeLists.txt
+++ b/src/cpp/jenum/CMakeLists.txt
@@ -1,3 +1,4 @@
+set_source_files_properties(example.i PROPERTIES CPLUSPLUS ON)
 add_swig_java_wrapper(jenum example.cxx)
   
 #set_source_files_properties(example.i PROPERTIES SWIG_FLAGS "-package\ callback")
