--- a/src/cpp/CMakeLists.txt
+++ b/src/cpp/CMakeLists.txt
@@ -26,7 +26,7 @@ add_subdirectory(simple)
 add_subdirectory(variables)
 add_subdirectory(typemap)
 add_subdirectory(multimap)
-add_subdirectory(native)
+add_subdirectory(jnative)
 
 
 set(CPP_SOURCES ${CPP_SOURCES} PARENT_SCOPE)
