--- a/src/cpp/jnative/CMakeLists.txt
+++ b/src/cpp/jnative/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_swig_java_wrapper(jnative empty.cxx)
+add_swig_java_wrapper(jnative empty.c)
   
 #set_source_files_properties(example.i PROPERTIES SWIG_FLAGS "-package\ callback")
